Ajout d'une balise meta pour un référencement

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Seurat Mathéo - Dev Jeux Vidéo</title>
+    <meta name="description" content="Découvrez le portfolio de Seurat Mathéo, étudiant en BUT Informatique et développeur de jeux vidéo en devenir. Explorez mes projets sur Unity et Phaser, et contactez-moi pour une opportunité de stage.">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
