Ajout d'un lien clickable pour jouer a mon jeu phaser

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     <h3>Mon premier jeu en JS Phaser</h3>
                     <p>Un petit jeu où le joueur contrôle un panier avec les flèches directionnelles. L'objectif est de récupérer au minimum 30 pommes en 30 secondes pour gagner.</p>
                     <a href="https://github.com/FraZy34/AppleCatcher">Voir le code (GitHub)</a>
+                    <a href="https://frazy34.github.io/AppleCatcher/">Pour jouer à ce jeu</a>
                 </div>
                 <div class="project-card">
                     <h3>Mon deuxième jeu en JS Phaser</h3>
