Ajout d'une p pour rentre plus joli mon site

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <section id="accueil" class="hero">
-            <h1>Salut, je suis Seurat Mathéo</h1>
+            <h1>Salut, je suis Mathéo Seurat</h1>
             <p>Développeur de Jeux Vidéo (en devenir) | C# & Unity</p>
             <a href="#projets" class="cta-button">Voir mes projets</a>
         </section>
@@ -95,7 +95,7 @@
                 <div class="project-card">
                     <h3>Mon premier jeu en JS Phaser</h3>
                     <p>Un petit jeu où le joueur contrôle un panier avec les flèches directionnelles. L'objectif est de récupérer au minimum 30 pommes en 30 secondes pour gagner.</p>
-                    <a href="https://github.com/FraZy34/AppleCatcher">Voir le code (GitHub)</a>
+                    <p><a href="https://github.com/FraZy34/AppleCatcher">Voir le code (GitHub)</a></p>
                     <a href="https://frazy34.github.io/AppleCatcher/">Pour jouer à ce jeu</a>
                 </div>
                 <div class="project-card">
