Ajout du lien pour jouer au deuxième jeu Phaser

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                 <div class="project-card">
                     <h3>Mon deuxième jeu en JS Phaser</h3>
                     <p>Ici, j'ai recodé le jeu 2048 en reproduisant les mécaniques, les animations et la palette de couleurs de l'original.</p>
-                    <a href="https://github.com/FraZy34/2048">Voir le code (GitHub)</a>
+                    <p><a href="https://github.com/FraZy34/2048">Voir le code (GitHub)</a></p>
+                    <a href="https://frazy34.github.io/2048/">Pour jouer à ce jeu</a>
                 </div>
                 <div class="project-card">
                     <h3>Tycoon-IUT sur Unity</h3>
