Ajout de target=_blank pour ouvrir une nouvelle page pour chaque lien

--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@
                 <div class="project-card">
                     <h3>Mon premier jeu en JS Phaser</h3>
                     <p>Un petit jeu où le joueur contrôle un panier avec les flèches directionnelles. L'objectif est de récupérer au minimum 30 pommes en 30 secondes pour gagner.</p>
-                    <p><a href="https://github.com/FraZy34/AppleCatcher">Voir le code (GitHub)</a></p>
-                    <a href="https://frazy34.github.io/AppleCatcher/">Pour jouer à ce jeu</a>
+                    <p><a href="https://github.com/FraZy34/AppleCatcher" target="_blank">Voir le code (GitHub)</a></p>
+                    <a href="https://frazy34.github.io/AppleCatcher/" target="_blank">Pour jouer à ce jeu</a>
                 </div>
                 <div class="project-card">
                     <h3>Mon deuxième jeu en JS Phaser</h3>
                     <p>Ici, j'ai recodé le jeu 2048 en reproduisant les mécaniques, les animations et la palette de couleurs de l'original.</p>
-                    <p><a href="https://github.com/FraZy34/2048">Voir le code (GitHub)</a></p>
-                    <a href="https://frazy34.github.io/2048/">Pour jouer à ce jeu</a>
+                    <p><a href="https://github.com/FraZy34/2048" target="_blank">Voir le code (GitHub)</a></p>
+                    <a href="https://frazy34.github.io/2048/" target="_blank">Pour jouer à ce jeu</a>
                 </div>
                 <div class="project-card">
                     <h3>Tycoon-IUT sur Unity</h3>
                     <p>Actuellement, seul le Game Design est fini et la Direction Artistique est en cours de développement. Le but de mon jeu est de pouvoir créer et gérer
                         un IUT en achetant par exemple des PC pour gagner plus d'argent, ce qui permet d'acheter d'autres bâtiments et d'accroître sa fortune. 
                         Mon jeu sera présenté sur une map isométrique avec des assets libres de droit et des assets que j'ai créés.</p>
-                    <a href="https://github.com/FraZy34/Tycoon-IUT">Voir le code (GitHub)</a>
+                    <a href="https://github.com/FraZy34/Tycoon-IUT" target="_blank">Voir le code (GitHub)</a>
                 </div>
             </div>
         </section>
