Ajout de compétences

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="categorie-competence">
                     <h3>🎮 Jeux Vidéo</h3>
                     <ul>
-                        <li>Unity</li>
+                        <li>Unity (Bonne maîtrise)</li>
                         <li>C# (POO)</li>
                         <li>JavaScript (Phaser)</li>
                         <li>(Futur C++ sur UE5)</li>
@@ -63,16 +63,15 @@
                     <ul>
                         <li>HTML5</li>
                         <li>CSS3</li>
+                        <li>JavaScript (Web)</li>
                     </ul>
                 </div>
                 
                 <div class="categorie-competence">
                     <h3>⚙️ Back-End (Notions)</h3>
                     <ul>
-                        <li>JavaScript (Web)</li>
-                        <li>SQL (Bases)</li>
-                        <li>PHP (Symfony)</li>
-                         <li>C++ (Natif)</li>
+                        <li>Symfony</li>
+                        <li>PHP</li>
                     </ul>
                 </div>
 
@@ -82,7 +81,24 @@
                         <li>GitLab & GitHub</li>
                         <li>Visual Studio Code</li>
                         <li>Visual Studio (pour Unity)</li>
-                        <li>Unity (Bonne maîtrise)</li>
+                        <li>PHPStorm & Pycharm</li>
+                    </ul>
+                </div>
+
+                <div class="categorie-competence">
+                    <h3> Base de données</h3>
+                    <ul>
+                        <li>SQL</li>
+                        <li>SGBDR (MySQL)</li>
+                    </ul>
+                </div>
+
+                <div class="categorie-competence">
+                    <h3>Autre</h3>
+                    <ul>
+                        <li>Python</li>
+                        <li>C++ (natif)</li>
+                        <li>Git</li>
                     </ul>
                 </div>
                 
