Ajout des emoji pour le gh et linkedin et compétences

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio - Seurat Mathéo - Dev Jeux Vidéo</title>
     <meta name="description" content="Découvrez le portfolio de Seurat Mathéo, étudiant en BUT Informatique et développeur de jeux vidéo en devenir. Explorez mes projets sur Unity et Phaser, et contactez-moi pour une opportunité de stage.">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
 
@@ -18,8 +19,12 @@
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="https://github.com/FraZy34" target="_blank" class="nav-icon" title="GitHub">GH</a></li>
-                <li><a href="https://www.linkedin.com/in/math%C3%A9o-seurat-76983b309/" target="_blank" class="nav-icon" title="LinkedIn">IN</a></li>
+                <li><a href="https://github.com/FraZy34" target="_blank" class="nav-icon" title="GitHub">
+                    <i class="fa-brands fa-github"></i>
+                </a></li>
+                <li><a href="https://www.linkedin.com/in/math%C3%A9o-seurat-76983b309/" target="_blank" class="nav-icon" title="LinkedIn">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a></li>
             </ul>
 
             <button id="theme-toggle" aria-label="Changer le thème">🌙</button>
@@ -86,7 +91,7 @@
                 </div>
 
                 <div class="categorie-competence">
-                    <h3> Base de données</h3>
+                    <h3>💾 Base de données</h3>
                     <ul>
                         <li>SQL</li>
                         <li>SGBDR (MySQL)</li>
@@ -94,7 +99,7 @@
                 </div>
 
                 <div class="categorie-competence">
-                    <h3>Autre</h3>
+                    <h3>📎 Autre</h3>
                     <ul>
                         <li>Python</li>
                         <li>C++ (natif)</li>
