Améilloration du titre / sous-titre

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
     <main>
         <section id="accueil" class="hero">
-            <h1>Salut, je suis Mathéo Seurat</h1>
-            <p>Développeur de Jeux Vidéo (en devenir) | C# & Unity</p>
+            <h1>Mathéo Seurat - Développeur de Jeux Vidéo (en devenir) | C# & Unity</h1>
+            <p>Étudiant à Reims, je me passionne pour la création de jeux vidéo. J'aime maîtriser 
+                l'ensemble du processus, que ce soit le développement pur ou la direction artistique.</p>
             <a href="#projets" class="cta-button">Voir mes projets</a>
         </section>
 
@@ -126,7 +127,7 @@
                     <a href="https://frazy34.github.io/2048/" target="_blank">Pour jouer à ce jeu</a>
                 </div>
                 <div class="project-card">
-                    <h3>Tycoon-IUT sur Unity</h3>
+                    <h3>Tycoon-IUT sur Unity (En cours)</h3>
                     <p>Actuellement, seul le Game Design est fini et la Direction Artistique est en cours de développement. Le but de mon jeu est de pouvoir créer et gérer
                         un IUT en achetant par exemple des PC pour gagner plus d'argent, ce qui permet d'acheter d'autres bâtiments et d'accroître sa fortune. 
                         Mon jeu sera présenté sur une map isométrique avec des assets libres de droit et des assets que j'ai créés.</p>
