Modification de mon portfolio au niveau de mon titre et a propos de moi deviens Mon objectif à terme et modification dans le css pour regler les modif html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#accueil" class="logo">Seurat Mathéo</a>
 
             <ul id="nav-links">
-                <li><a href="#a-propos">À propos</a></li>
+                <li><a href="#objectif">Mon Objectif</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -35,14 +35,21 @@
 
     <main>
         <section id="accueil" class="hero">
-            <h1>Mathéo Seurat - Développeur de Jeux Vidéo (en devenir) | C# & Unity</h1>
-            <p>Étudiant à Reims, je me passionne pour la création de jeux vidéo. J'aime maîtriser 
-                l'ensemble du processus, que ce soit le développement pur ou la direction artistique.</p>
-            <a href="#projets" class="cta-button">Voir mes projets</a>
-        </section>
+        
+        <h1>Mathéo Seurat</h1>
+        <p class="hero-subtitle">Développement/Conception et programmation numérique (web-applicatif-jeu vidéo)</p>
+        <p class="hero-goal">Mon idéal professionnel : <strong>Développeur de Jeu Vidéo (C# & Unity)</strong></p>
+        
+        <p class="hero-description">
+            Étudiant à Reims, je me passionne pour le développement Informatique. J'aime maîtriser 
+            l'ensemble du processus, que ce soit le développement pur ou la direction artistique.
+        </p>
 
-        <section id="a-propos">
-            <h2>À propos de moi</h2>
+        <a href="#projets" class="cta-button">Voir mes projets</a>
+    </section>
+
+        <section id="objectif">
+            <h2>Mon Objectif à terme</h2>
             <p>J'ai toujours été fasciné par les jeux vidéo et leur développement. Ça a commencé avec des petits jeux sur Scratch, et maintenant je continue en BUT Informatique (2ème année) avec 
                 des projets plus sérieux. Mon objectif est simple : je veux participer à la construction de jeux vidéo. Je suis curieux, j'aime coder et je n'ai pas peur de 
                 mettre les mains dedans pour faire fonctionner les choses. Je cherche un stage pour appliquer ce que j'apprends et prouver ma motivation sur un projet concret.</p>
